ops-catalog: add txn_count to catalog stats
Our stats documents include a count of transactions that have been completed,
but this value was not previously included in the stats summary that gets
materialized into the control plane.  This adds a `txn_count` column to the
`catalog_stats*` tables and threads the value through the ops catalog.

--- a/ops-catalog/data-plane-template.flow.yaml
+++ b/ops-catalog/data-plane-template.flow.yaml
@@ -26,7 +26,7 @@ collections:
 
   ops/rollups/L1/BASE_NAME/events:
     schema: events.schema.yaml
-    key: [/fields/eventTarget, /eventType]
+    key: [/fields/eventTarget, /fields/eventType]
     projections:
       event_type:
         location: /fields/eventType
