ops-catalog: add txn_count to catalog stats
Our stats documents include a count of transactions that have been completed,
but this value was not previously included in the stats summary that gets
materialized into the control plane.  This adds a `txn_count` column to the
`catalog_stats*` tables and threads the value through the ops catalog.

--- a/ops-catalog/data-plane-template.flow.yaml
+++ b/ops-catalog/data-plane-template.flow.yaml
@@ -43,6 +43,8 @@ collections:
           shuffle: any
           lambda: |
             select json($flow_document) where $fields$eventType is not null;
+      shards:
+        minTxnDuration: 5s
 
   ops/rollups/L1/BASE_NAME/inferred-schemas:
     schema: inferred-schemas.schema.yaml
