--- a/ops-catalog/reporting-L2-template.flow.yaml
+++ b/ops-catalog/reporting-L2-template.flow.yaml
@@ -59,6 +59,7 @@ collections:
       bytes_read_from_me: /statsSummary/readFromMe/bytesTotal
       docs_read_from_me: /statsSummary/readFromMe/docsTotal
       usage_seconds: /statsSummary/usageSeconds
+      txn_count: /statsSummary/txnCount
       warnings: /statsSummary/warnings
       errors: /statsSummary/errors
       failures: /statsSummary/failures
