agent: add public OpenMetrics API
For the argument prefix, the API fetches all non-prefix-rollup catalog_stats
rows of the current month, and generates grouped OpenMetrics samples with metadata.

Also update the authorize() middleware to additionally accept a refresh token,
which is automatically exchanged for a control-plane access token.
This is to accommodate third-party scrappers which are unable to perform
a token exchange prior to invoking the scrape API.

We're starting with an initial subset of metrics, which we intend to
expand upon.

--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -16,6 +16,7 @@ allocator = { path = "../allocator" }
 async-process = { path = "../async-process" }
 automations = { path = "../automations" }
 build = { path = "../build" }
+coroutines = { path = "../coroutines" }
 dekaf = { path = "../dekaf" }
 doc = { path = "../doc" }
 gazette = { path = "../gazette" }
