ops-catalog: thread through collection generation id on inferred schemas
This builds on previous work, which added the id of the publication that
initially created a collection as a suffix of the journal template.
Originally, this was intended to allow correct handling of cloud storage so
that a collection (or task) can be deleted and re-created again with the same
name.  The journal template suffix will be different, so that data from the
previous generation is kept separate from data for the new generation. But a
problem remains with inferred schemas, since the inferred schemas table only
stores the collection name and not the journal template suffix.

This begins formalizing that journal template suffix as a `generation_id`, and
updates the runtime and ops catalog to thread through the generation id as part
of inferred schema updates. It is materialized as part of the
`inferred_schemas` table.

This commit stops short of actually changing how inferred schema resolution works.
Notably, the primary key of the `inferred_schemas` table is unchanged, meaning that
multiple different inferred schemas still cannot coexist for the same `collection_name`.
Instead, the `collection_generation_id` is simply materialized alongside the schema,
and we can figure later how we want that to factor into inferred schema resolutions
as part of publications.

--- a/crates/runtime/Cargo.toml
+++ b/crates/runtime/Cargo.toml
@@ -35,6 +35,7 @@ proto-grpc = { path = "../proto-grpc", features = [
     "runtime_server",
 ] }
 simd-doc = { path = "../simd-doc" }
+tables = { path = "../tables" }
 tuple = { path = "../tuple" }
 unseal = { path = "../unseal" }
 
