--- a/ops-catalog/local-view.flow.yaml
+++ b/ops-catalog/local-view.flow.yaml
@@ -5,7 +5,7 @@ materializations:
   ops.us-central1.v1/stats-view:
     endpoint:
       connector:
-        image: ghcr.io/estuary/materialize-postgres:local
+        image: ghcr.io/estuary/materialize-postgres:dev
         config: local-endpoint.sops.yaml
 
     bindings:
@@ -16,6 +16,7 @@ materializations:
           recommended: false
           include:
             collection_name: {}
+            collection_generation_id: {}
             schema: {}
             flow_document: {}
       - source: ops.us-central1.v1/catalog-stats-L2
