hotfix for bad JSON encoding issue
models::Id is sometimes not wrapped as a string when encoded as log
fields.

Remove the source of these logs, and apply a fallback fixup which allows
us to read affected logs.

--- a/crates/simd-doc/Cargo.toml
+++ b/crates/simd-doc/Cargo.toml
@@ -17,6 +17,7 @@ cxx = "1.0"
 bytes = { workspace = true }
 memchr = { workspace = true }
 rkyv = { workspace = true }
+regex = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
