--- a/crates/validation/Cargo.toml
+++ b/crates/validation/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 
 [dependencies]
 assemble = { path = "../assemble" }
+coroutines = { path = "../coroutines" }
 doc = { path = "../doc" }
 extractors = { path = "../extractors" }
 json = { path = "../json" }
