dekaf: add field extraction tests
This adds back the tests I had originally written using the `validate` crate, but this time it's using the logic straight from `build` instead.

--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -84,6 +84,8 @@ apache-avro = { workspace = true }
 
 [dev-dependencies]
 async-process = { path = "../async-process" }
+build = { path = "../build" }
+tables = { path = "../tables" }
 flowctl = { path = "../flowctl" }
 locate-bin = { path = "../locate-bin" }
 
