ops-catalog: fix events L1
Fixes a boneheaded mistake in the L1 events derivation, and adds a test
verifying the behavior. This had been a last-minute decision to validate
the type of `/fields/error`, since the events schema only allows it to
be a string. Note that it's not technically _necessary_ for `error` to
be constrained to strings, but it seemed like a more prudent starting
point, given that events are intended to communicate errors to users.

--- a/ops-catalog/data-plane-template.flow.yaml
+++ b/ops-catalog/data-plane-template.flow.yaml
@@ -43,7 +43,7 @@ collections:
             select json($flow_document)
               where json_type($fields, '$.eventType') = 'text'
               and json_type($fields, '$.eventTarget') = 'text'
-              and json_type($fields, '$.error') in ('null', 'text');
+              and coalesce(json_type($fields, '$.error'), 'null') in ('null', 'text');
       shards:
         minTxnDuration: 5s
 
