runtime: Correct handling for calling `dekaf::connector::unary_materialize`
Originally there was a special-case for Dekaf in `Runtime::unary_materialize`, but https://github.com/estuary/flow/pull/2001 changed the way unary RPCs are invoked in a way that bypassed that logic.
So rolling with the change to implement all connector invocations in terms of streaming RPCs , this refactors `dekaf::connector` to expose a
`connector()` method that implements a streaming interface. It still only handles Spec and Validate.

--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -25,6 +25,7 @@ proto-gazette = { path = "../proto-gazette" }
 simd-doc = { path = "../simd-doc" }
 tuple = { path = "../tuple" }
 unseal = { path = "../unseal" }
+coroutines = { path = "../coroutines" }
 
 aes-siv = { workspace = true }
 anyhow = { workspace = true }
