all validation changes passing WIP

--- a/crates/validation/tests/disabled_bindings_are_ignored.yaml
+++ b/crates/validation/tests/disabled_bindings_are_ignored.yaml
@@ -53,34 +53,34 @@ test://example/catalog.yaml:
       bindings:
         - target: disabled/test/one
           disable: true
-          resource: { stream: disabled-stream }
+          resource: { src-name: disabled-stream }
         - target: testing/collection
-          resource: { stream: enabled-stream }
+          resource: { src-name: enabled-stream }
     testing/fully-disabled-capture:
       endpoint: { connector: { image: s3, config: {} } }
       bindings:
         - target: disabled/test/two
           disable: true
-          resource: { stream: disabled-stream }
+          resource: { src-name: disabled-stream }
         - target: disabled/test/three
           disable: true
-          resource: { stream: another-disabled-stream }
+          resource: { src-name: another-disabled-stream }
   materializations:
     testing/partially-disabled-materialization:
       endpoint: { connector: { image: s3, config: {} } }
       bindings:
         - source: testing/collection
           disable: true
-          resource: { stream: disabled-stream }
+          resource: { tgt-name: disabled-stream }
         - source: testing/collection
-          resource: { stream: enabled-stream }
+          resource: { tgt-name: enabled-stream }
 
     testing/fully-disabled-materialization:
       endpoint: { connector: { image: s3, config: {} } }
       bindings:
         - source: testing/collection
           disable: true
-          resource: { stream: disabled-stream }
+          resource: { tgt-name: disabled-stream }
 
 driver:
   dataPlanes:
