dekaf: Categorize errors encountered during session authentication slightly better
We're getting lots of complaints about unexpected authentication errors. This is because we're categorizing _all_ errors encountered during `sasl_authenticate` as `SaslAuthenticationFailed`, whereas most of the real causes are transient network related errors. We could be even better about breaking down the error variants, but this should be enough to stop the bleeding

--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -82,6 +82,7 @@ typestate = { workspace = true }
 url = { workspace = true }
 webpki = { workspace = true }
 apache-avro = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
 async-process = { path = "../async-process" }
