ops: introduce configUpdate events
`configUpdate` events are materialized into the `config_updates` table.
Inserts into this table triggers a run of the corresponding live specs
controller.

--- a/ops-catalog/local-view.flow.yaml
+++ b/ops-catalog/local-view.flow.yaml
@@ -75,3 +75,20 @@ materializations:
           exclude:
             - event_type
             - fields/eventType
+      - source:
+          name: ops.us-central1.v1/events/L2
+          partitions:
+            include:
+              event_type: ["configUpdate"]
+        resource:
+          table: config_updates
+        fields:
+          recommended: false
+          include:
+            catalog_name: {}
+            build: { "DDL": "flowid" }
+            ts: {}
+            flow_document: {}
+          exclude:
+            - event_type
+            - fields/eventType
