data-plane-controller: testing framework

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,8 @@ mime = "0.3"
 memchr = "2.5"
 metrics = "0.23.0"
 metrics-exporter-prometheus = "0.15.3"
+mockall = "0.13.1"
+mockall_double = "0.3.1"
 prometheus = "0.13.4"
 md5 = "0.7.0"
 num-bigint = "0.4"
