--- a/crates/data-plane-controller/Cargo.toml
+++ b/crates/data-plane-controller/Cargo.toml
@@ -32,6 +32,8 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = { workspace = true }
+schemars = { workspace = true }
+jsonschema = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
