agent: add collection_resets integration test
Adds an integration test covering collection reset scenarios.  Also updates the
integration tests to account for the `x-collection-generation-id` being present
in inferred schemas.

--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -73,6 +73,7 @@ validator = { workspace = true }
 xxhash-rust = { workspace = true }
 
 [dev-dependencies]
+assemble = { path = "../assemble" }
 insta = { workspace = true }
 md5 = { workspace = true }
 serial_test = { workspace = true }
