validation: strip _meta property (rollback contingency)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
     paths-ignore:
       - "site/**"
   pull_request:
-    branches: [master]
+    branches: [johnny/agent-revert-base]
     paths-ignore:
       - "site/**"
 
