--- a/crates/billing-integrations/Cargo.toml
+++ b/crates/billing-integrations/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = { workspace = true }
 async-stripe = { workspace = true }
 clap = { workspace = true }
 chrono = { workspace = true }
+comfy-table = { workspace = true }
 futures = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -23,4 +24,6 @@ tokio = { workspace = true }
 tokio-util = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+num-format = { workspace = true }
 itertools = { workspace = true }
+indicatif = { workspace = true }
