models: adjust MaterializationFields fields
Add `group_by`, which will contain an optional group-by key for the
materialization to use. If not specified, the collection key is used.

Rename `include` => `require`, leaving an alias for `include` to be
accepted.

Update `recommended` to also take an integer, and note in comments that
this reflects the desired selection depth of materialization fields.

--- a/crates/sources/src/scenarios/test_endpoints_captures_materializations.yaml
+++ b/crates/sources/src/scenarios/test_endpoints_captures_materializations.yaml
@@ -74,7 +74,7 @@ test://example/catalog.yaml:
               exclude: { "other": [42] }
           resource: { table: "table_two" }
           fields:
-            include:
+            require:
               add: {}
             exclude: [del]
             recommended: true
