--- a/crates/validation/tests/validation_skipped_when_disabled.yaml
+++ b/crates/validation/tests/validation_skipped_when_disabled.yaml
@@ -33,8 +33,8 @@ test://example/catalog.yaml:
         - resource: { whatever: "and ever" }
           source: acmeCo/foo
           fields:
-            include:
-              # Explicit, included fields must work with no-op constraint validation.
+            require:
+              # Required fields must work with no-op constraint validation.
               val: {}
             recommended: true
 
