validation: enforce materialization `groupBy` constraints
Require that all fields of a binding groupBy (if present) reference a
valid projection and have a single scalar type.

Determine and thread-through the effective group-by key of the binding,
as `groupBy` if present, and falling back to canonical projections
of the collection key

Detect when the effective group-by key of a binding changes.
We'll eventually use this to trigger the onIncompatibleSchemaChange
action.

--- a/crates/validation/tests/model.yaml
+++ b/crates/validation/tests/model.yaml
@@ -114,6 +114,8 @@ test://example/webhook-deliveries:
             notBefore: 2017-03-03T03:02:01Z
           resource: { fixture: one }
           fields:
+            groupBy:
+              - Int
             require:
               str: { pass: through }
             exclude:
