refactors to streamline the Cargo dependency graph
With a focus on removing / simplifying `validation` dependencies,
as we'll be including it in flow-wasm shortly.

--- a/crates/flow-web/Cargo.toml
+++ b/crates/flow-web/Cargo.toml
@@ -29,7 +29,7 @@ opt-level = "s"
 default = ["console_error_panic_hook"]
 
 [dependencies]
-doc = { path = "../doc", default-features = false } # `combine` feature requires `lz4`, which doesn't WASM.
+doc = { path = "../doc" }
 json = { path = "../json" }
 models = { path = "../models" }
 tables = { path = "../tables" }
