json: replace use of fancy-regex with regex
This is a place where we'll deliberately depart from the standard.
fancy-regex allows for a lot of back-tracking and imposed computational,
and in my opinion is just not needed.

The ISO_8601_DURATION regex was impacted, as that used look-ahead /
back-tracking features not supported by `regex`. Replace it and add
numerous conformance tests.

--- a/crates/doc/Cargo.toml
+++ b/crates/doc/Cargo.toml
@@ -17,11 +17,11 @@ base64 = { workspace = true }
 bigdecimal = { workspace = true }
 bumpalo = { workspace = true }
 bytes = { workspace = true }
-fancy-regex = { workspace = true }
 futures = { workspace = true }
 fxhash = { workspace = true }
 itertools = { workspace = true }
 lz4 = { workspace = true, optional = true }
+regex = { workspace = true }
 rkyv = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
