--- a/crates/json/Cargo.toml
+++ b/crates/json/Cargo.toml
@@ -12,7 +12,7 @@ license.workspace = true
 addr = { workspace = true }
 bigdecimal = { workspace = true }
 bitvec = { workspace = true }
-fancy-regex = { workspace = true }
+regex = { workspace = true }
 fxhash = { workspace = true }
 iri-string = { workspace = true }
 itertools = { workspace = true }
