ops-catalog: add groupBy and update exclusions in local-view
For compatibility with upcoming field selection changes.
This was determined by watching for and correcting shadow
selection mismatches, and also verifying local-stack tables
still matched their production counterparts.

--- a/ops-catalog/local-view.flow.yaml
+++ b/ops-catalog/local-view.flow.yaml
@@ -14,6 +14,7 @@ materializations:
           table: inferred_schemas
         fields:
           recommended: false
+          groupBy: [collection_name]
           require:
             collection_name: {}
             schema: {}
@@ -23,6 +24,7 @@ materializations:
           table: catalog_stats
         fields:
           recommended: false
+          groupBy: [catalog_name, grain, ts]
           require:
             catalog_name: {}
             grain: {}
@@ -51,12 +53,14 @@ materializations:
           table: connector_status
         fields:
           recommended: false
+          groupBy: [catalog_name]
           require:
             catalog_name: {}
             flow_document: {}
           exclude:
+            - build
+            - error
             - event_type
-            - fields/eventType
       - source:
           name: ops.us-central1.v1/events/L2
           partitions:
@@ -67,14 +71,16 @@ materializations:
           delta_updates: true
         fields:
           recommended: false
+          groupBy: [catalog_name]
           require:
             catalog_name: {}
             build: { "DDL": "flowid" }
             ts: {}
             flow_document: {}
           exclude:
+            - error
+            - event_target
             - event_type
-            - fields/eventType
       - source:
           name: ops.us-central1.v1/events/L2
           partitions:
@@ -84,6 +90,7 @@ materializations:
           table: config_updates
         fields:
           recommended: false
+          groupBy: [catalog_name]
           require:
             catalog_name: {}
             build: { "DDL": "flowid" }
@@ -91,4 +98,4 @@ materializations:
             flow_document: {}
           exclude:
             - event_type
-            - fields/eventType
+            - error
