migrate: refactor crate to library-only with automation support
- Remove CLI functionality and main.rs, making migrate crate library-only
- Add comprehensive READMEs for supabase, migrate, and automations crates
- Integrate MigrationExecutor with agent's automation framework
- Add SQL trigger for automated data plane migration tasks

Tested in a local stack with two configured data-planes
by adding data_plane_migrations rows of configured tasks,
and observing agent moved them, and that they started successfully
in the new data-plane.

--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -19,6 +19,7 @@ build = { path = "../build" }
 coroutines = { path = "../coroutines" }
 dekaf = { path = "../dekaf" }
 doc = { path = "../doc" }
+migrate = { path = "../migrate" }
 gazette = { path = "../gazette" }
 json = { path = "../json" }
 labels = { path = "../labels" }
