flowctl: add collections split-journals subcommand
Add new `flowctl collections split-journals` command that splits collection
journals using existing activate crate functionality. Features:

- Reuses CollectionJournalSelector for --collection and --partitions args
- Supports --dry-run to preview splits without applying them
- Updated fetch_user_collection_authorization to accept admin parameter

--- a/crates/flowctl/Cargo.toml
+++ b/crates/flowctl/Cargo.toml
@@ -11,6 +11,7 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+activate = { path = "../activate" }
 assemble = { path = "../assemble" }
 async-process = { path = "../async-process" }
 build = { path = "../build" }
