validation: omit below-depth objects when `recommended: true`
This is a compromise to avoid churning existing materializations
running under current field selection logic.

--- a/crates/validation/src/field_selection.fixture.yaml
+++ b/crates/validation/src/field_selection.fixture.yaml
@@ -138,7 +138,7 @@ collection:
               strategy: merge
       - $ref: "#MyTable"
 model:
-  recommended: true
+  recommended: 100
   groupBy: [an_int, a_bool]
   require:
     nested: { cfg: 42 }
