--- a/crates/runtime/Cargo.toml
+++ b/crates/runtime/Cargo.toml
@@ -40,13 +40,18 @@ tuple = { path = "../tuple" }
 unseal = { path = "../unseal" }
 
 anyhow = { workspace = true }
+aws-config = { workspace = true}
+aws-sdk-sts = { workspace = true }
+aws-credential-types = { workspace = true }
 bytes = { workspace = true }
 clap = { workspace = true }
 futures = { workspace = true }
 json-patch = { workspace = true }
+jsonwebtoken = { workspace = true }
 librocksdb-sys = { workspace = true }
 pbjson-types = { workspace = true }
 prost = { workspace = true }
+reqwest = { workspace = true }
 rocksdb = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
