--- a/crates/models/Cargo.toml
+++ b/crates/models/Cargo.toml
@@ -12,6 +12,7 @@ license.workspace = true
 # NOTE(johnny): DO NOT add proto-flow or proto-gazette to this crate.
 
 anyhow = { workspace = true }
+async-graphql = { workspace = true, optional = true }
 caseless = { workspace = true }
 chrono = { workspace = true }
 humantime-serde = { workspace = true }
@@ -37,3 +38,4 @@ serde_yaml = { workspace = true }
 default = []
 
 sqlx-support = ["sqlx"]
+async-graphql-support = ["async-graphql"]
