--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -24,7 +24,7 @@ gazette = { path = "../gazette" }
 json = { path = "../json" }
 labels = { path = "../labels" }
 locate-bin = { path = "../locate-bin" }
-models = { path = "../models" }
+models = { path = "../models", features = ["async-graphql-support"] }
 ops = { path = "../ops" }
 proto-flow = { path = "../proto-flow" }
 proto-gazette = { path = "../proto-gazette" }
@@ -36,7 +36,8 @@ validation = { path = "../validation" }
 
 aide = { workspace = true }
 anyhow = { workspace = true }
-async_graphql = { workspace = true }
+async-graphql = { workspace = true }
+async-graphql-axum = { workspace = true }
 async-trait = { workspace = true }
 axum = { workspace = true }
 axum-extra = { workspace = true }
