--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,7 +79,7 @@ jemallocator = { version = "0.3", features = ["profiling"] }
 jemalloc-ctl = "0.3"
 json-patch = "0.3"
 jsonschema = "0.30.0"
-jsonwebtoken = { version = "9" }
+jsonwebtoken = { version = "9", features = ["use_pem"] }
 js-sys = "0.3.60"
 kafka-protocol = "0.13.0"
 lazy_static = "1.4"
